# Sentinel

./: .gitignore  LICENSE.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
sentinel/: __init__.py  analyzer.py  base.py  cli.py  coop.py  csp.py  exceptions.py  hsts.py  models.py  permissions_policy.py  referrer_policy.py  renderer.py
sentinel/tests/: README.md  __init__.py  conftest.py  test_analyzer.py  test_coop.py  test_csp.py  test_hsts.py  test_models.py  test_permissions_policy.py  test_referrer_policy.py
